tests/fixtures/errors/undefined_fn.chisa
let x = nonExistentFunction(42)
